--- a/openedx/features/clearesult_features/templates/b2c_header.html
+++ b/openedx/features/clearesult_features/templates/b2c_header.html
@@ -1,1 +1,51 @@
-<header>b2c header</header>
+<header class="header">
+    <strong class="logo">
+        <a href="#"><img src="{{ logo }}" alt=""></a>
+    </strong>
+    <div class="nav-holder">
+        <ul class="header-btns">
+            <li><a href="#" class="btn btn-primary">Become a Trade Ally</a></li>
+            <li><a href="#" class="btn btn-primary-outline">Sign in to Portal</a></li>
+        </ul>
+        <nav class="nav">
+            <ul class="main-menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Program Resources</a>
+                    <div class="dropdown">
+                        <div class="container">
+                            <ul>
+                                <li>
+                                    <strong class="title">
+                                        <a href="#">Program Announcements</a>
+                                    </strong>
+                                    <p>View Announcement, Program statuses and general announcements.</p>
+                                </li>
+                                <li>
+                                    <strong class="title">
+                                        <a href="#">News</a>
+                                    </strong>
+                                    <p>View Latest news, webinars, trade shows, lunch-and-learns and more</p>
+                                </li>
+                                <li>
+                                    <strong class="title">
+                                        <a href="#">Events</a>
+                                    </strong>
+                                    <p>Loren ipsum content</p>
+                                </li>
+                                <li>
+                                    <strong class="title">
+                                        <a href="#">Resource</a>
+                                    </strong>
+                                    <p>View Trade Ally Resources</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+                <li><a href="#">Training</a></li>
+                <li><a href="#">FAQs</a></li>
+                <li class="active"><a href="#">Contact Us</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
