--- a/openedx/features/clearesult_features/templates/b2c_reset_password.html
+++ b/openedx/features/clearesult_features/templates/b2c_reset_password.html
@@ -1,8 +1,16 @@
 {% extends "b2c_base.html" %}
 {% block main %}
-<div class="wrapper">
-    <img class="logo" src="{{ logo }}" alt="logo">
+<div class="page-title">
     <h1>Reset Password</h1>
+</div>
+<div class="content-area">
+    <div class="text-block">
+        <h2>CLEAResult Power Light Trade Ally Account</h2>
+        <p>Access to CLEAResult Power Light resources and the project portal requires a user login. When you become a trade ally, your account manager will provide with your credentials.</p>
+        <p>&nbsp;</p>
+        <p><strong>Not registered yet?</strong></p>
+        <p><a href="#">Join the Program</a></p>
+    </div>
     <div class="cr-forms">
         <div id="api"></div>
     </div>
