--- a/openedx/features/clearesult_features/templates/b2c_login.html
+++ b/openedx/features/clearesult_features/templates/b2c_login.html
@@ -9,7 +9,7 @@
         <p>Access to CLEAResult Power Light resources and the project portal requires a user login. When you become a trade ally, your account manager will provide with your credentials.</p>
         <p>&nbsp;</p>
         <p><strong>Not registered yet?</strong></p>
-        <p><a href="#">Join the Program</a></p>
+        <p><a href="{{ ta_become_ally }}">Join the Program</a></p>
     </div>
     <div class="cr-forms">
         <div id="api"></div>
