--- a/openedx/features/clearesult_features/templates/b2c_footer.html
+++ b/openedx/features/clearesult_features/templates/b2c_footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
     <div class="container">
-        <p>&copy; 2020 Southern Company. All rights reserved. Do not reuse text or graphics without written permission. | <strong>Privacy Statement</strong></p>
+        <p>&copy; {{ copyrights_year }} {{ platform_name }}. All rights reserved. Do not reuse text or graphics without written permission. | <strong>Privacy Statement</strong></p>
     </div>
 </footer>
