--- a/openedx/features/clearesult_features/templates/b2c_header.html
+++ b/openedx/features/clearesult_features/templates/b2c_header.html
@@ -1,4 +1,5 @@
 <header class="header">
+    <button class="nav-opener"></button>
     <strong class="logo">
         <img src="{{ logo }}" alt="{{ platform_name }}">
     </strong>
@@ -13,6 +14,7 @@
             <ul class="main-menu">
                 <li><a href="{{ ta_home }}">Home</a></li>
                 <li><a href="{{ ta_programe_resources }}">Program Resources</a>
+                    <button class="drop-opener"></button>
                     <div class="dropdown">
                         <div class="container">
                             <ul>
