--- a/openedx/features/clearesult_features/templates/b2c_base.html
+++ b/openedx/features/clearesult_features/templates/b2c_base.html
@@ -21,5 +21,19 @@
             </div>
             {% include "b2c_footer.html" %}
         </div>
+        <script
+        src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous"></script>
+        <script type="text/javascript">
+            $(document).ready(function (){
+                $('.nav-opener').on('click', function (){
+                    $('body').toggleClass('mobile-menu-open');
+                });
+                $('.drop-opener').on('click', function (){
+                    $(this).parent('li').toggleClass('menu-open');
+                });
+            });
+        </script>
     </body>
 </html>
