Associate new credits field with cms courses

--- a/cms/templates/settings.html
+++ b/cms/templates/settings.html
@@ -318,6 +318,48 @@ CMS.URL.UPLOAD_ASSET = '${upload_asset_url | n, js_escaped_string}'
           % endif
         </div>
 
+        <div class="group-settings" id="course-credits">
+            <header>
+                <h2 class="title-2">${_('Cours Credits')}</h2>
+                <span class="tip">${_('Asssociate credits with the course.')}</span>
+            </header>
+            <table class="table table-striped" id="credits-div">
+                <thead >
+                    <tr>
+                        <th class="credit-label">${_("Credit Type")}</th>
+                        <th class="credit-label">${_("Credits")}</th>
+                        <th>
+                            <button class="add-course-credits-field">
+                                <span>${_("Add Credits")}</span>
+                                <i class="fa fa-plus" aria-hidden="true"></i>
+                            </button>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                % for credit in course_credits:
+                  <tr class="course-credit-row" >
+                        <td class="credit-type-td">
+                            <select class="credit-type" name="credit-type" disabled>
+                                <option value="${credit.get('credit_type_code')}" selected>${credit.get('credit_type_name')}</option>
+                            </select>
+                        </td>
+                        <td class="credit-td">
+                            <input type="number" value="${credit.get('credits')}" class="credit-value" name="credit-value" min="1" min="20">
+                        </td>
+                        <td>
+                            <button class="remove-course-credits-field">
+                                <i class="fa fa-trash" aria-hidden="true"></i>
+                            </button>
+                        </td>
+                  </tr>
+                % endfor
+                </tbody>
+            </table>
+            <span id="clearesult-credit-error-no-provider" class="message-error" style='display:None'>No more credit providers have been registered.</span>
+            <span id="clearesult-credit-error-range-value" class="message-error" style='display:None'>Credit value should be in range (1 to 20).</span>
+        </div>
+
         % if about_page_editable:
         <div class="group-settings course_details">
           <header>
