--- a/cms/templates/settings.html
+++ b/cms/templates/settings.html
@@ -345,7 +345,7 @@ CMS.URL.UPLOAD_ASSET = '${upload_asset_url | n, js_escaped_string}'
                             </select>
                         </td>
                         <td class="credit-td">
-                            <input type="number" value="${credit.get('credits')}" class="credit-value" name="credit-value" min="1" min="20">
+                            <input type="number" value="${credit.get('credits')}" class="credit-value" name="credit-value" min="0.1" max="20" step="0.1">
                         </td>
                         <td>
                             <button class="remove-course-credits-field">
@@ -355,9 +355,10 @@ CMS.URL.UPLOAD_ASSET = '${upload_asset_url | n, js_escaped_string}'
                   </tr>
                 % endfor
                 </tbody>
+                <span class="tip tip-stacked">${_("Number more than two decimal places will be rounded off like 2.56 will be changed to 2.6")}</span>
             </table>
             <span id="clearesult-credit-error-no-provider" class="message-error" style='display:None'>No more credit providers have been registered.</span>
-            <span id="clearesult-credit-error-range-value" class="message-error" style='display:None'>Credit value should be in range (1 to 20).</span>
+            <span id="clearesult-credit-error-range-value" class="message-error" style='display:None'>Credit value should be in range (0.1 to 20.0).</span>
         </div>
 
         % if about_page_editable:
