Add user learning experience - restrict users to acceible courses

--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -57,13 +57,17 @@
         % endif
 
         <div class="courses${'' if course_discovery_enabled else ' no-course-discovery'}" role="region" aria-label="${_('List of Courses')}">
-          <ul class="courses-listing courses-list">
-            %for course in courses:
-            <li class="courses-listing-item">
-              <%include file="../course.html" args="course=course" />
-            </li>
-            %endfor
-          </ul>
+          % if len(courses):
+            <ul class="courses-listing courses-list">
+              %for course in courses:
+              <li class="courses-listing-item">
+                <%include file="../course.html" args="course=course" />
+              </li>
+              %endfor
+            </ul>
+          % else:
+              <h2 style="text-align:center;">Your Group does not have any courses.</h2>
+          % endif
         </div>
 
 
