--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -66,7 +66,7 @@
               %endfor
             </ul>
           % else:
-              <h2 style="text-align:center;">Your Group does not have any courses.</h2>
+              <h2 style="text-align:center;">Sorry, we encountered an error. Please contact the team by clicking on the Contact Us tab.</h2>
           % endif
         </div>
 
