--- a/lms/templates/index.html
+++ b/lms/templates/index.html
@@ -8,6 +8,7 @@ from django.urls import reverse
 from openedx.core.djangolib.markup import HTML, Text
 %>
 
+<%block name='bodyclass'>home-page</%block>
 <main id="main" aria-label="Content" tabindex="-1">
     <section class="home">
       <header>
